--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,4 +8,10 @@
     uppercase text-xs tracking-widest text-gray-500 transition-all
     hover:border-yellow-400/40 hover:text-yellow-400/40
   }
+
+  .contactInput{
+    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-gray-700 text-gray-500
+    placeholder-gray-500 transition-all focus:border-yellow-500/40 focus:text-yellow-500/40
+    hover:border-yellow-500/40
+  }
 }
